[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fontes/marcellus-sc.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Cenas/TelaMenu/Botões/ComecarButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/TelaMenu/Multiplayer_Lobby.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Multiplayer_Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 304.961
margin_top = 150.309
margin_right = 642.961
margin_bottom = 281.309
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time 1" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 119.0
margin_bottom = 131.0

[node name="Label1" type="Label" parent="HBoxContainer/Time 1"]
margin_right = 119.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Player 1"

[node name="Label2" type="Label" parent="HBoxContainer/Time 1"]
margin_top = 45.0
margin_right = 119.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "Player 2"

[node name="Label3" type="Label" parent="HBoxContainer/Time 1"]
margin_top = 90.0
margin_right = 119.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 1 )
text = "Player 3"

[node name="Divisão a base da gambiarra" type="Label" parent="HBoxContainer"]
margin_left = 123.0
margin_top = 58.0
margin_right = 215.0
margin_bottom = 72.0
text = "                       "

[node name="Time 2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 219.0
margin_right = 338.0
margin_bottom = 131.0

[node name="Label1" type="Label" parent="HBoxContainer/Time 2"]
margin_right = 119.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Player 1"

[node name="Label2" type="Label" parent="HBoxContainer/Time 2"]
margin_top = 45.0
margin_right = 119.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "Player 2"

[node name="Label3" type="Label" parent="HBoxContainer/Time 2"]
margin_top = 90.0
margin_right = 119.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 1 )
text = "Player 3"

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 0.352
anchor_bottom = 0.1
margin_left = 107.624
margin_top = 423.322
margin_right = 107.176
margin_bottom = 423.322

[node name="ComecarPartida" parent="VBoxContainer" instance=ExtResource( 2 )]
flat = false

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 364.0
margin_top = 23.0
margin_right = 364.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_left = 368.0
margin_right = 728.0
text = "Sair"
flat = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 731.0
margin_top = 41.0
margin_right = 976.0
margin_bottom = 402.0
custom_fonts/normal_font = SubResource( 2 )

[node name="RefreshPlayers" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="pressed" from="VBoxContainer/ComecarPartida" to="." method="_on_ComecarPartida_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_Sair_pressed"]
[connection signal="timeout" from="RefreshPlayers" to="." method="_on_RefreshPlayers_timeout"]
